# angr-rs

./: .gitignore  Cargo.toml  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_PLAN.md  PHASE5_COMPLETE.md  PHASE5_PLAN.md  PROJECT_SUMMARY.md  README.md  TASK8_COMPLETE.md  plan.txt
angr-analysis/: Cargo.toml
angr-analysis/src/: lib.rs
angr-analysis/src/crash/: minimizer.rs  mod.rs  triage.rs
angr-analysis/src/dataflow/: mod.rs
angr-analysis/src/decompiler/: mod.rs
angr-analysis/src/exploit/: mod.rs  payload.rs
angr-analysis/src/functions/: mod.rs
angr-analysis/src/input/: generator.rs  mod.rs  mutator.rs
angr-analysis/src/taint/: mod.rs  policy.rs  tracker.rs
angr-analysis/src/types/: mod.rs
angr-analysis/src/variables/: mod.rs
angr-analysis/src/vulnerabilities/: buffer_overflow.rs  mod.rs  use_after_free.rs
angr-api/: Cargo.toml
angr-api/src/: analyses.rs  lib.rs  project.rs  simulation.rs
angr-api/src/compat/: mod.rs
angr-cli/: Cargo.toml
angr-cli/src/: main.rs
angr-core/: Cargo.toml
angr-core/src/: lib.rs
angr-core/src/cfg/: mod.rs
angr-core/src/engine/: executor.rs  merge.rs  mod.rs  pathgroup.rs  stepper.rs
angr-core/src/loader/: mod.rs
angr-core/src/memory/: mod.rs
angr-core/src/procedures/: README.md  libc.rs  memory.rs  mod.rs  string.rs
angr-core/src/solver/: mod.rs  z3_solver.rs
angr-core/src/symbolic/: constraint.rs  memory.rs  mod.rs  state.rs  value.rs
angr-ffi/: Cargo.toml
angr-ffi/src/: lib.rs
angr-ffi/src/python/: mod.rs
examples/: phase3_integration.rs  phase4_analysis.rs  phase5_api.rs
vex-core/: Cargo.toml
vex-core/src/: lib.rs
vex-core/src/guest/: mod.rs  state.rs
vex-core/src/ir/: builder.rs  mod.rs
vex-core/src/lifter/: mod.rs
vex-core/src/optimization/: mod.rs
vex-guests/: Cargo.toml
vex-guests/src/: lib.rs
vex-guests/src/arm/: mod.rs  registers.rs
vex-guests/src/arm64/: mod.rs  registers.rs
vex-guests/src/mips/: decoder.rs  mod.rs  registers.rs
vex-guests/src/x86/: mod.rs  registers.rs
vex-guests/src/x86_64/: arithmetic.rs  conditional.rs  decoder.rs  eflags.rs  mod.rs  modrm.rs  registers.rs
