[workspace]
resolver = "2"
members = [
    "vex-core",
    "vex-guests",
    "angr-core",
    "angr-analysis",
    "angr-api",
    "angr-cli",
    "angr-ffi",
]

[workspace.package]
version = "0.1.0"
authors = ["SharpAngr Team"]
edition = "2021"
rust-version = "1.70"
license = "GPL-2.0"
repository = "https://github.com/anhed0nic/sharpAngr"

[workspace.dependencies]
# Internal dependencies
vex-core = { path = "vex-core" }
vex-guests = { path = "vex-guests" }
angr-core = { path = "angr-core" }
angr-analysis = { path = "angr-analysis" }
angr-api = { path = "angr-api" }

# External dependencies
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
parking_lot = "0.12"
hashbrown = "0.14"
smallvec = "1.11"
bitvec = "1.0"

# Binary parsing
goblin = "0.8"
object = "0.32"

# Disassembly (reference/validation)
capstone = "0.12"

# SMT solving
z3 = { version = "0.12", features = ["static-link-z3"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true
