[package]
name = "vex-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core VEX IR implementation for binary analysis"

[dependencies]
thiserror.workspace = true
serde.workspace = true
smallvec.workspace = true
bitvec.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest = "1.4"
